MAVEN_OPTS